# Rail_Lidar_Segmentation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: nuage-points-3d.csv  nuage-points-3d.json
src/: exploration_fichier.py  railway_segmentation.cpp
